This is my nearly perfect homework. only have a little tightening up left to do

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,22 +1,177 @@
+/* 
+    Global Styles
+*/
+
+body { 
+    margin: 0;
+    color: #777777;
+    background: url(../images/white-waves.png) repeat;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    font-family: 'Georgia', Times, Times New Roman, serif;
+}
+
+h1, h2, h3 {
+    font-size: 24px;
+}
+
+h4 {
+    font-size: 18px;
+}
 
 h1 {
-    background-color:#4aaaa5;
-    font-size: 50px;
-    font-family: Georgia; 
+    color: white;
+    background-color: #4aaaa5;
     text-align: left;
     display: block;
-    width: 100%;
+}
+
+h2 {
+    color:  #4aaaa5;
+}
+
+h3 {
     color: white;
+    background-color: #4aaaa5;
+
 }
-h2{
-    color: #4aaaa5;
+
+h4 {
+    color:#4aaaa5;
 }
-p{
-    font-family: Helvetica;
+
+p {
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     color:#777777;
+    line-height: 1.8; 
 }
+
 img {
     float:left;
-    margin-right:10px;
-    margin-bottom:10px;
+    margin-right: 21px;
+    margin-bottom: 31px;
+}
+
+ul {
+    list-style: none;
+}
+
+a:hover {
+    color: teal;
+}
+
+.nav-wrapper {
+    width: 100%;
+    background-color: white;
+}
+
+.nav, .main-content {
+    width: 960px;
+    margin: 0 auto;    
+}
+
+.nav {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    padding-left: 0;
+    margin-bottom: 0;
+    list-style: none;
+}
+
+.navbar-name {
+    background: #4aaaa5
+}
+
+.nav-item {
+    color: #777777;
+}
+
+.flex-container {
+    display: flex;
+    
+}
+
+.flex-container > li {
+    margin: 0 5px;
+}
+
+.main-content {
+    margin-top: 40px;
+    background-color: #ffffff;
+    border-color: #dddddd;
+    margin-bottom: 95px;
+}
+
+.content {
+    padding: 40px 30px;
+}
+
+.content .title {
+   border-bottom: 2px solid #cccccc;
+   
+}
+
+.content .title h2 {
+    margin-top: 0;
+    padding-bottom: 10px;
+    
+}
+
+/* .main-header { 
+    background-color: #ffffff;
+    border-color: #cccccc;
+} */
+
+.footer { 
+    position: fixed;
+    width: 100%;
+    bottom: 0;
+    background-color: #666666;
+    border-top: 4px solid #6FFFF7;
+    text-align: center;
+    min-height: 40px;
+
+}
+
+/* colors */
+.teal {
+    color: #4aaaa5; 
+}
+
+/* portfolio page */
+
+/* contact page */
+
+.contactform label {
+    font-size: 24px;
+    display: block;
+}
+.contactform input {
+    display: block;
+    width: 100%;
+}
+
+.contactform .btn-primary {
+    background-color: #4aaaa5;
+    position: relative;
+    top: 16px;
+
+}
+
+
+.portpix {
+    max-width: 400px;
+    margin-top: 18px;
+    position: relative;
+    display: inline-block;
+}
+
+textarea {
+    width:100%;
+    min-height:200px;
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
 }
