--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,16 +41,10 @@ h4 {
     color:#4aaaa5;
 }
 
-p {
+p .bio{
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     color:#777777;
     line-height: 1.8; 
-}
-
-img {
-    float:left;
-    margin-right: 21px;
-    margin-bottom: 31px;
 }
 
 ul {
@@ -159,13 +153,25 @@ a:hover {
     top: 16px;
 
 }
-
-
 .portpix {
-    max-width: 400px;
     margin-top: 18px;
+} 
+
+.image-wrapper {
     position: relative;
-    display: inline-block;
+    margin-top: 12px;
+    margin-bottom: 40px;
+
+}
+
+.image-wrapper .banner {
+    position: absolute;
+    top: 114px;
+    background-color: #4aaaa5;
+    color: white;
+    text-align: center;
+    width: 200px;
+    font-size: 20px;
 }
 
 textarea {
