--- a/assets/css/style-new.css
+++ b/assets/css/style-new.css
@@ -1,17 +1,24 @@
 body { 
-    background: url(../images/white-waves.png) repeat;
+    background: url(../images/background.jpg ) repeat;
 }
 
 .content {
     margin-top: 40px;
     margin-bottom: 95px;
     padding: 30px 20px;
-    background-color: #ffffff;
+    background-color: #666666;
+    color:rgba(240, 248, 255, 0.818);
+}
+.nav-wrapper {
+    width: 100%;
+    background-color: #666666;
+    border-bottom: 4px solid salmon;
+    color:salmon;
+    padding-left: 10px;
 }
 
 .navbar-name, .navbar-light .navbar-brand {
     background: #4aaaa5;
-    color: white !important;
     font-size: 24px;
     padding-left: 0.5em;
     padding-right: 0.5em; 
@@ -24,14 +31,103 @@ body {
 .navbar .navbar-nav .nav-item:not(:last-of-type) {
     margin-right: 0.25em;
     border-right: 1px solid grey;
-    padding-right: 0.25em;
-    
+    padding-right: 0.25em; 
 }
 
 .content{
     overflow: hidden;
 }
+
 .portpix ul li {
     float: left;
     margin-right: 15px;
 }
+
+h2 {
+    color:  darkslategray;
+}
+#myName{
+    color: darkslategray;
+    font-family: 'Cinzel', serif;
+}
+
+#navButtons a { 
+    color: darkslategray;
+    font-family: 'Cinzel', serif;
+    font-size: 20px;
+}
+
+/* Old CSS Stuff */
+
+
+.footer {
+    position: fixed;
+    width: 100%;
+    bottom: 0;
+    background-color: #666666;
+    border-top: 4px solid salmon;
+    text-align: center;
+    min-height: 40px;
+}
+
+a:hover {
+    color: white;
+}
+
+/* contact page 
+
+.contactform label {
+    font-size: 24px;
+    display: block;
+}
+
+.contactform input {
+    display: block;
+    width: 100%;
+}
+
+.contactform .btn-primary {
+    background-color: #4aaaa5;
+    position: relative;
+    top: 16px;
+
+}
+
+.portpix {
+    margin-top: 18px;
+}
+
+.image-wrapper {
+    position: relative;
+    margin-top: 12px;
+    margin-bottom: 40px;
+
+}
+
+.image-wrapper .banner {
+    position: absolute;
+    top: 114px;
+    background-color: #4aaaa5;
+    color: white;
+    text-align: center;
+    width: 200px;
+    font-size: 20px;
+}
+
+textarea {
+    width: 100%;
+    min-height: 200px;
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+}
+
+.myimage {
+    max-width: 100%;
+    max-height: 200px;
+    margin-right: 15px;
+    margin-top: 6px;
+    display: block;
+    float: left;
+}
+*/
