--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,12 +1,3 @@
-/* 
-    Global Styles
-*/
-
-/* body { 
-    margin: 0;
-    color: #777777;
-    background: url(../images/white-waves.png) repeat;
-} */
 
 h1, h2, h3, h4, h5, h6 {
     font-family: 'Georgia', Times, Times New Roman, serif;
@@ -182,6 +173,10 @@ textarea {
 }
 
 .myimage {
+    border-top: 5px solid  rgba(0, 0, 0, 0.509);
+    border-right: 5px solid  rgba(0, 0, 0, 0.509);
+    border-bottom: 5px solid  rgba(0, 0, 0, 0.509);
+    border-left: 5px solid  rgba(0, 0, 0, 0.509);
     max-width: 100%;
     max-height: 200px;
     margin-right: 15px;
