Changed contact page layout and styling

--- a/assets/css/style-new.css
+++ b/assets/css/style-new.css
@@ -43,6 +43,9 @@ body {
     color: darkslategray;
     font-family: 'Cinzel', serif;
 }
+.contactInfo {
+    color: darksalmon;
+}
 
 #navButtons a {
     color: darkslategray;
